@@ -1,3 +1,5 @@
+- Refactor: Moves SystemSender to ULisboa because of specific emails sent in ULisboaServiceRequest [#qubIT-Omnis-7804]
+
 7.23.0 (27-01-2025)
 - Refactor: Remove references to deprecated GradeScaleEnum related domain [#qubIT-Fenix-1784]
 
